Train and use notebook updates

--- a/modeluse.ipynb
+++ b/modeluse.ipynb
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('out/B1'),\n",
-       " PosixPath('out/B2'),\n",
-       " PosixPath('out/B3'),\n",
-       " PosixPath('out/B4'),\n",
-       " PosixPath('out/B5'),\n",
-       " PosixPath('out/B7')]"
+       "[PosixPath('netin/B1'),\n",
+       " PosixPath('netin/B2'),\n",
+       " PosixPath('netin/B3'),\n",
+       " PosixPath('netin/B4'),\n",
+       " PosixPath('netin/B5'),\n",
+       " PosixPath('netin/B7')]"
       ]
      },
      "metadata": {},
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,14 +312,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "from keras_unet.utils import plot_imgs\n",
-    "\n",
     "\n",
     "for batch in np.array_split(band1_paths, LOAD_SIZE):\n",
     "    names, x_pred = readin_batch(batch)\n",
