--- a/png2geotiff.ipynb
+++ b/png2geotiff.ipynb
@@ -61,19 +61,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn_path = \"./out/LC08_L1TP_042005_20150814_20170226_01_T1_NN.png\"\n",
-    "ref_path = \"./in/LC08_L1TP_042005_20150814_20170226_01_T1_B1.TIF\"\n",
+    "name = \"LC08_L1TP_045005_20190814_20190820_01_T1\"\n",
     "\n",
-    "out_path = \"./out/LC08_L1TP_042005_20150814_20170226_01_T1_NN.TIF\"\n",
+    "nn_path = f\"./out/{name}_NN.png\"\n",
+    "ref_path = f\"./in/{name}_B1.TIF\"\n",
+    "\n",
+    "out_path = f\"./out/{name}_NN.TIF\"\n",
     "\n",
     "nn = gdal.Open(nn_path)\n",
     "ref = gdal.Open(ref_path)\n",
     "\n",
-    "write_gtiff(nn.GetRasterBand(1).ReadAsArray(), ref, out_path)"
+    "nn_data = nn.GetRasterBand(1).ReadAsArray()\n",
+    "# display(nn_data.max())\n",
+    "\n",
+    "write_gtiff(nn_data, ref, out_path, options=['COMPRESS=LZW'])"
    ]
   },
   {
