Memory optimizations  - Store data as uint8 in numpy and transform to float32 on demand  - Convert validation data to tf tensor once, possible fix for memory leak bug in tf

--- a/modeltrain.ipynb
+++ b/modeltrain.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,35 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('data/tiles/ls7/B1'),\n",
-       " PosixPath('data/tiles/ls7/B2'),\n",
-       " PosixPath('data/tiles/ls7/B3'),\n",
-       " PosixPath('data/tiles/ls7/B4'),\n",
-       " PosixPath('data/tiles/ls7/B5'),\n",
-       " PosixPath('data/tiles/ls7/B7')]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DATA_DIR = Path(\"./data/tiles/ls7\")\n",
     "\n",
@@ -73,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,16 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_fname(fname):\n",
-    "    truth = np.array(Image.open(TRUTH_DIR / fname)) / MAX_Y\n",
-    "    bands = np.asarray([np.array(Image.open(band_dir / fname)) for band_dir in BAND_DIRS]) / MAX_X\n",
+    "    # div by maxy, but mul by maxx in anticipation of preprocess_transform\n",
+    "    truth = np.array(Image.open(TRUTH_DIR / fname)) / (MAX_Y / MAX_X)\n",
+    "    bands = np.asarray([np.array(Image.open(band_dir / fname)) for band_dir in BAND_DIRS])\n",
     "#     bands = bands[1:4][::-1]\n",
-    "    mchannel = np.dstack(bands).astype('float32')\n",
+    "    mchannel = np.dstack(bands).astype('uint8')\n",
     "    return mchannel, truth\n",
+    "\n",
+    "def preprocess_transform(ds):\n",
+    "    return (ds / MAX_X).astype('float32')\n",
     "\n",
     "def rgb_transform(ds):\n",
     "#     return np.flip(ds, 3)  # Bands 2, 3, 4 -> rgb\n",
@@ -100,37 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'LC08_L1TP_044006_20150711_20170227_01_T1_TILE5376_1536_512_512__T0.png'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(512, 512, 6)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(512, 512)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(truth_paths[0].name)\n",
     "\n",
@@ -191,7 +143,23 @@
     "print(\"x_train: \", x_train.shape)\n",
     "print(\"y_train: \", y_train.shape)\n",
     "print(\"x_val: \", x_val.shape)\n",
-    "print(\"y_val: \", y_val.shape)\n"
+    "print(\"y_val: \", y_val.shape)\n",
+    "\n",
+    "input_shape = x_train[0].shape\n",
+    "display(f'{input_shape=}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_val = preprocess_transform(x_val)\n",
+    "y_val = preprocess_transform(y_val)\n",
+    "\n",
+    "x_val_tf = tf.convert_to_tensor(x_val)\n",
+    "y_val_tf = tf.convert_to_tensor(y_val)"
    ]
   },
   {
@@ -205,11 +173,15 @@
     "train_gen = get_augmented(\n",
     "    x_train, y_train, batch_size=2,\n",
     "    data_gen_args = dict(\n",
+    "#         rescale=1 / 255,\n",
+    "        preprocessing_function=preprocess_transform,\n",
     "        rotation_range=360.,\n",
     "        width_shift_range=0.05,\n",
     "        height_shift_range=0.05,\n",
     "        shear_range=40,\n",
     "        zoom_range=0.2,\n",
+    "#         brightness_range=[0.7,1.4],  # only works on 1 or 3 channel images\n",
+    "#         channel_shift_range=20.0,\n",
     "        horizontal_flip=True,\n",
     "        vertical_flip=True,\n",
     "        fill_mode='constant'\n",
@@ -227,13 +199,18 @@
     "#         vertical_flip=True,\n",
     "#         fill_mode='constant'\n",
     "#     )\n",
-    "# )"
+    "# )\n",
+    "\n",
+    "del x_train\n",
+    "del y_train"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "sample_batch = next(train_gen)\n",
@@ -253,9 +230,6 @@
    "outputs": [],
    "source": [
     "from keras_unet.models import custom_unet\n",
-    "\n",
-    "input_shape = x_train[0].shape\n",
-    "display(input_shape)\n",
     "\n",
     "model = custom_unet(\n",
     "    input_shape,\n",
@@ -322,10 +296,10 @@
    "source": [
     "history = model.fit(\n",
     "    train_gen,\n",
-    "    steps_per_epoch=400,\n",
+    "    steps_per_epoch=620,\n",
     "    epochs=500,\n",
     "    \n",
-    "    validation_data=(x_val, y_val),\n",
+    "    validation_data=(x_val_tf, y_val_tf),\n",
     "    callbacks=[callback_checkpoint]\n",
     ")\n"
    ]
