Export an image with nodata and threshold already applied

--- a/png2geotiff.ipynb
+++ b/png2geotiff.ipynb
@@ -61,16 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"LC08_L1TP_045005_20190814_20190820_01_T1\"\n",
+    "name = \"LC08_L1TP_044005_20160713_20170222_01_T1\"\n",
     "\n",
     "nn_path = f\"./out/{name}_NN.png\"\n",
+    "nnt_path = f\"./out/{name}_NNT.png\"\n",
     "ref_path = f\"./in/{name}_B1.TIF\"\n",
     "\n",
     "out_path = f\"./out/{name}_NN.TIF\"\n",
+    "outt_path = f\"./out/{name}_NNT.TIF\"\n",
     "\n",
     "nn = gdal.Open(nn_path)\n",
     "ref = gdal.Open(ref_path)\n",
@@ -78,7 +80,8 @@
     "nn_data = nn.GetRasterBand(1).ReadAsArray()\n",
     "# display(nn_data.max())\n",
     "\n",
-    "write_gtiff(nn_data, ref, out_path, options=['COMPRESS=LZW'])"
+    "write_gtiff(nn_data, ref, outt_path, options=['COMPRESS=DEFLATE', 'PREDICTOR=2', 'ZLEVEL=9'], nodata=255)\n",
+    "write_gtiff(nn_data, ref, out_path, options=['COMPRESS=DEFLATE', 'PREDICTOR=2', 'ZLEVEL=9'])"
    ]
   },
   {
