--- a/png2geotiff.ipynb
+++ b/png2geotiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,12 +75,14 @@
     "outt_path = f\"./out/{name}_NNT.TIF\"\n",
     "\n",
     "nn = gdal.Open(nn_path)\n",
+    "nnt = gdal.Open(nnt_path)\n",
     "ref = gdal.Open(ref_path)\n",
     "\n",
     "nn_data = nn.GetRasterBand(1).ReadAsArray()\n",
+    "nnt_data = nnt.GetRasterBand(1).ReadAsArray()\n",
     "# display(nn_data.max())\n",
     "\n",
-    "write_gtiff(nn_data, ref, outt_path, options=['COMPRESS=DEFLATE', 'PREDICTOR=2', 'ZLEVEL=9'], nodata=255)\n",
+    "write_gtiff(nnt_data, ref, outt_path, options=['COMPRESS=DEFLATE', 'PREDICTOR=2', 'ZLEVEL=9'], nodata=255)\n",
     "write_gtiff(nn_data, ref, out_path, options=['COMPRESS=DEFLATE', 'PREDICTOR=2', 'ZLEVEL=9'])"
    ]
   },
