memory optimization & larger network

--- a/modeluse.ipynb
+++ b/modeluse.ipynb
@@ -16,7 +16,7 @@
     "from PIL import Image\n",
     "\n",
     "# disable GPU\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\"\n",
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\"\n",
     "\n",
     "import tensorflow as tf\n",
     "import tensorflow.keras as keras\n"
