unsupervised learning & memory optimizations

--- a/modeltrainpp.ipynb
+++ b/modeltrainpp.ipynb
@@ -19,9 +19,11 @@
     "import glob\n",
     "import os\n",
     "import sys\n",
-    "import gc\n",
     "from pathlib import Path\n",
     "from PIL import Image\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
     "\n",
     "import tensorflow as tf\n",
     "import tensorflow.keras as keras\n",
@@ -31,26 +33,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = Path(\"./data/tiles/ls8\")\n",
-    "BATCH_SIZE = 2\n",
+    "DATA_DIR = Path(\"./data/tiles/ls78\")\n",
     "\n",
     "MAX_X = 255\n",
-    "# MAX_Y = 65535  # TODO: Tilegen outputs rgb image, not grayscale\n",
-    "MAX_Y = 255\n",
+    "MAX_Y = 65535  # TODO: Tilegen outputs rgb image, not grayscale\n",
     "\n",
-    "BAND_DIRS = sorted(list(DATA_DIR.glob(\"B*\"))) # [::-1]  # reverse for rgb\n",
+    "BAND_DIRS = sorted(list(DATA_DIR.glob(\"B*\")))\n",
     "TRUTH_DIR = DATA_DIR / \"truth\"\n",
     "\n",
     "display(BAND_DIRS)\n",
@@ -77,7 +70,7 @@
     "    truth = np.array(Image.open(TRUTH_DIR / fname)) / (MAX_Y / MAX_X)\n",
     "    truth = truth.astype('uint8')\n",
     "    bands = np.asarray([np.array(Image.open(band_dir / fname)) for band_dir in BAND_DIRS])\n",
-    "#     bands = bands[1:4] # [::-1]\n",
+    "#     bands = bands[1:4][::-1]\n",
     "    mchannel = np.dstack(bands).astype('uint8')\n",
     "    return mchannel, truth\n",
     "\n",
@@ -85,7 +78,6 @@
     "    return (ds / MAX_X).astype('float32')\n",
     "\n",
     "def rgb_transform(ds):\n",
-    "#     return ds # bands 4, 3, 2, -> rgb\n",
     "#     return np.flip(ds, 3)  # Bands 2, 3, 4 -> rgb\n",
     "    return np.flip(ds[:,:,:,1:4], 3)  # Bands 1, 2, 3, 4, 5, 7 -> rgb"
    ]
@@ -112,17 +104,20 @@
    },
    "outputs": [],
    "source": [
-    "img_np = np.zeros(shape = (len(truth_paths), *x0.shape), dtype = 'uint8')\n",
-    "msk_np = np.zeros(shape = (len(truth_paths), *y0.shape), dtype = 'uint8')\n",
+    "img_lst = []\n",
+    "msk_lst = []\n",
     "\n",
-    "for i, truth_path in enumerate(truth_paths):\n",
+    "for truth_path in truth_paths:\n",
     "    img, truth = read_fname(truth_path.name)\n",
-    "    img_np[i] = img\n",
-    "    msk_np[i] = truth\n",
+    "    img_lst.append(img)\n",
+    "    msk_lst.append(truth)\n",
     "\n",
+    "img_np = np.asarray(img_lst)\n",
+    "msk_np = np.asarray(msk_lst)\n",
     "msk_np = msk_np.reshape(msk_np.shape[0], msk_np.shape[1], msk_np.shape[2], 1)\n",
     "\n",
-    "gc.collect()\n",
+    "del img_lst\n",
+    "del msk_lst\n",
     "\n",
     "display(f'{img_np.shape=}')\n",
     "display(f'{msk_np.shape=}')"
@@ -143,7 +138,7 @@
     "display(msk_np.min())\n",
     "display(msk_np.max())\n",
     "\n",
-    "plot_imgs(org_imgs=rgb_transform(img_np[:10]) / 255, mask_imgs=msk_np[:10] / 255, nm_img_to_plot=5, figsize=6)"
+    "plot_imgs(org_imgs=rgb_transform(img_np) / 255, mask_imgs=msk_np / 255, nm_img_to_plot=5, figsize=6)"
    ]
   },
   {
@@ -154,9 +149,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# TODO: this requires a copy - use different sets for train and val to limit memory\n",
-    "\n",
-    "x_train, x_val, y_train, y_val = train_test_split(img_np, msk_np, test_size=0.05, random_state=0)\n",
+    "x_train, x_val, y_train, y_val = train_test_split(img_np, msk_np, test_size=0.30, random_state=0)\n",
     "\n",
     "print(\"x_train: \", x_train.shape)\n",
     "print(\"y_train: \", y_train.shape)\n",
@@ -164,20 +157,7 @@
     "print(\"y_val: \", y_val.shape)\n",
     "\n",
     "input_shape = x_train[0].shape\n",
-    "display(f'{input_shape=}')\n",
-    "\n",
-    "train_len = len(x_train)\n",
-    "validation_len = len(x_val)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del img_np\n",
-    "del msk_np"
+    "display(f'{input_shape=}')"
    ]
   },
   {
@@ -200,40 +180,25 @@
    "outputs": [],
    "source": [
     "from keras_unet.utils import get_augmented\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "# from keras.preprocessing.image import NumpyArrayIterator\n",
-    "from imgloader import NumpyArrayIterator\n",
     "\n",
-    "img_gen_args = dict(\n",
-    "    # rescale=1 / 255,\n",
-    "    preprocessing_function=preprocess_transform,\n",
-    "    rotation_range=360.,\n",
-    "    width_shift_range=0.05,\n",
-    "    height_shift_range=0.05,\n",
-    "    shear_range=40,\n",
-    "    zoom_range=0.2,\n",
-    "    # brightness_range=[0.6,1.4],  # only works on 1 or 3 channel images\n",
-    "    channel_shift_range=10.0,\n",
-    "    horizontal_flip=True,\n",
-    "    vertical_flip=True,\n",
-    "    fill_mode='reflect'\n",
-    ")\n",
-    "\n",
-    "# train_gen = get_augmented(\n",
-    "#     x_train, y_train, \n",
-    "# #     x_val_tf, y_val_tf,\n",
-    "#     batch_size=BATCH_SIZE,\n",
-    "#     data_gen_args = img_gen_args\n",
-    "# )\n",
-    "\n",
-    "train_gen = NumpyArrayIterator(\n",
-    "    x_train, y_train,\n",
-    "    image_data_generator = ImageDataGenerator(**img_gen_args),\n",
-    "    transform_img = preprocess_transform,\n",
-    "    batch_size = BATCH_SIZE,\n",
-    "    shuffle = True,\n",
-    "    dtype='float32'\n",
-    ")\n",
+    "train_gen = get_augmented(\n",
+    "    x_train, y_train, \n",
+    "#     x_val_tf, y_val_tf,\n",
+    "    batch_size=2,\n",
+    "    data_gen_args = dict(\n",
+    "#         rescale=1 / 255,\n",
+    "        preprocessing_function=preprocess_transform,\n",
+    "        rotation_range=360.,\n",
+    "        width_shift_range=0.05,\n",
+    "        height_shift_range=0.05,\n",
+    "        shear_range=40,\n",
+    "        zoom_range=0.2,\n",
+    "#         brightness_range=[0.7,1.4],  # only works on 1 or 3 channel images\n",
+    "        channel_shift_range=10.0,\n",
+    "        horizontal_flip=True,\n",
+    "        vertical_flip=True,\n",
+    "        fill_mode='reflect'\n",
+    "    ))\n",
     "\n",
     "# train_gen = get_augmented(\n",
     "#     x_train, y_train, batch_size=2,\n",
@@ -249,8 +214,8 @@
     "#     )\n",
     "# )\n",
     "\n",
-    "# del x_train\n",
-    "# del y_train"
+    "del x_train\n",
+    "del y_train"
    ]
   },
   {
@@ -267,18 +232,6 @@
     "print(xx.shape, yy.shape)\n",
     "from keras_unet.utils import plot_imgs\n",
     "\n",
-    "\n",
-    "# def preprocess_transform(ds):\n",
-    "#     return (ds / MAX_X).astype('float32')\n",
-    "\n",
-    "# xx = preprocess_transform(xx)\n",
-    "# yy = preprocess_transform(yy)\n",
-    "\n",
-    "print(xx.min())\n",
-    "print(xx.max())\n",
-    "print(yy.min())\n",
-    "print(yy.max())\n",
-    "\n",
     "plot_imgs(org_imgs=rgb_transform(xx), mask_imgs=yy, nm_img_to_plot=2, figsize=6)"
    ]
   },
@@ -290,51 +243,130 @@
    },
    "outputs": [],
    "source": [
-    "from bcdunet import BCDU_net_D3, BCDU_net_D1\n",
+    "# https://towardsdatascience.com/biomedical-image-segmentation-unet-991d075a3a4b\n",
     "\n",
-    "# input_shape = (512, 512, 3)\n",
-    "# model = BCDU_net_D3(input_size=input_shape)\n"
+    "class conv_block_nested(nn.Module):\n",
+    "\n",
+    "    def __init__(self, in_ch, mid_ch, out_ch):\n",
+    "        super(conv_block_nested, self).__init__()\n",
+    "        self.activation = nn.ReLU(inplace=True)\n",
+    "        self.conv1 = nn.Conv2d(in_ch, mid_ch, kernel_size=3, padding=1, bias=True)\n",
+    "        self.bn1 = nn.BatchNorm2d(mid_ch)\n",
+    "        self.conv2 = nn.Conv2d(mid_ch, out_ch, kernel_size=3, padding=1, bias=True)\n",
+    "        self.bn2 = nn.BatchNorm2d(out_ch)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = self.bn1(x)\n",
+    "        x = self.activation(x)\n",
+    "\n",
+    "        x = self.conv2(x)\n",
+    "        x = self.bn2(x)\n",
+    "        output = self.activation(x)\n",
+    "\n",
+    "        return output\n",
+    "\n",
+    "class Nested_UNet(nn.Module):\n",
+    "\n",
+    "    def __init__(self, in_ch=3, out_ch=1):\n",
+    "        super(Nested_UNet, self).__init__()\n",
+    "\n",
+    "        n1 = 512\n",
+    "        filters = [n1, n1 * 2, n1 * 4, n1 * 8, n1 * 16]\n",
+    "\n",
+    "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+    "        self.Up = nn.Upsample(scale_factor=2, mode='bilinear', align_corners=True)\n",
+    "\n",
+    "        self.conv0_0 = conv_block_nested(in_ch, filters[0], filters[0])\n",
+    "        self.conv1_0 = conv_block_nested(filters[0], filters[1], filters[1])\n",
+    "        self.conv2_0 = conv_block_nested(filters[1], filters[2], filters[2])\n",
+    "        self.conv3_0 = conv_block_nested(filters[2], filters[3], filters[3])\n",
+    "        self.conv4_0 = conv_block_nested(filters[3], filters[4], filters[4])\n",
+    "\n",
+    "        self.conv0_1 = conv_block_nested(filters[0] + filters[1], filters[0], filters[0])\n",
+    "        self.conv1_1 = conv_block_nested(filters[1] + filters[2], filters[1], filters[1])\n",
+    "        self.conv2_1 = conv_block_nested(filters[2] + filters[3], filters[2], filters[2])\n",
+    "        self.conv3_1 = conv_block_nested(filters[3] + filters[4], filters[3], filters[3])\n",
+    "\n",
+    "        self.conv0_2 = conv_block_nested(filters[0]*2 + filters[1], filters[0], filters[0])\n",
+    "        self.conv1_2 = conv_block_nested(filters[1]*2 + filters[2], filters[1], filters[1])\n",
+    "        self.conv2_2 = conv_block_nested(filters[2]*2 + filters[3], filters[2], filters[2])\n",
+    "\n",
+    "        self.conv0_3 = conv_block_nested(filters[0]*3 + filters[1], filters[0], filters[0])\n",
+    "        self.conv1_3 = conv_block_nested(filters[1]*3 + filters[2], filters[1], filters[1])\n",
+    "\n",
+    "        self.conv0_4 = conv_block_nested(filters[0]*4 + filters[1], filters[0], filters[0])\n",
+    "\n",
+    "        self.final = nn.Conv2d(filters[0], out_ch, kernel_size=1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        x0_0 = self.conv0_0(x)\n",
+    "        x1_0 = self.conv1_0(self.pool(x0_0))\n",
+    "        x0_1 = self.conv0_1(torch.cat([x0_0, self.Up(x1_0)], 1))\n",
+    "\n",
+    "        x2_0 = self.conv2_0(self.pool(x1_0))\n",
+    "        x1_1 = self.conv1_1(torch.cat([x1_0, self.Up(x2_0)], 1))\n",
+    "        x0_2 = self.conv0_2(torch.cat([x0_0, x0_1, self.Up(x1_1)], 1))\n",
+    "\n",
+    "        x3_0 = self.conv3_0(self.pool(x2_0))\n",
+    "        x2_1 = self.conv2_1(torch.cat([x2_0, self.Up(x3_0)], 1))\n",
+    "        x1_2 = self.conv1_2(torch.cat([x1_0, x1_1, self.Up(x2_1)], 1))\n",
+    "        x0_3 = self.conv0_3(torch.cat([x0_0, x0_1, x0_2, self.Up(x1_2)], 1))\n",
+    "\n",
+    "        x4_0 = self.conv4_0(self.pool(x3_0))\n",
+    "        x3_1 = self.conv3_1(torch.cat([x3_0, self.Up(x4_0)], 1))\n",
+    "        x2_2 = self.conv2_2(torch.cat([x2_0, x2_1, self.Up(x3_1)], 1))\n",
+    "        x1_3 = self.conv1_3(torch.cat([x1_0, x1_1, x1_2, self.Up(x2_2)], 1))\n",
+    "        x0_4 = self.conv0_4(torch.cat([x0_0, x0_1, x0_2, x0_3, self.Up(x1_3)], 1))\n",
+    "\n",
+    "        output = self.final(x0_4)\n",
+    "        return output"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from keras_unet.models import custom_unet\n",
+    "import torch.optim as optim\n",
     "\n",
-    "# # input_shape = (512, 512, 6)\n",
+    "net = Nested_UNet(in_ch=6)\n",
     "\n",
-    "def create_model_unet():\n",
-    "    model = custom_unet(\n",
-    "        input_shape,\n",
-    "        filters=32,\n",
-    "        use_batch_norm=True,\n",
-    "        dropout=0.5,  # 0.3\n",
-    "        dropout_change_per_layer=0.0,\n",
-    "        use_attention=False,\n",
-    "        use_squeeze_on_enc=True,\n",
-    "        use_squeeze_on_dec=True,\n",
-    "        num_layers=5,\n",
-    "    )\n",
-    "    return model\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n",
     "\n",
-    "model = create_model_unet()\n",
+    "for epoch in range(2):  # loop over the dataset multiple times\n",
     "\n",
-    "# model = custom_unet(\n",
-    "#     input_shape,\n",
-    "#     filters=32,\n",
-    "#     use_batch_norm=True,\n",
-    "#     dropout=0.5,  # 0.3\n",
-    "#     dropout_change_per_layer=0.0,\n",
-    "#     use_attention=False,\n",
-    "#     use_squeeze_on_enc=True,\n",
-    "#     use_squeeze_on_dec=True,\n",
-    "#     num_layers=5,\n",
-    "# )\n"
+    "    running_loss = 0.0\n",
+    "    for i, data in enumerate(train_gen, 0):\n",
+    "        # get the inputs; data is a list of [inputs, labels]\n",
+    "        inputs, labels = data\n",
+    "        inputs = np.moveaxis(inputs, 3, 1)\n",
+    "        inputs = torch.from_numpy(inputs)\n",
+    "        labels = torch.from_numpy(labels)\n",
+    "\n",
+    "        # zero the parameter gradients\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # forward + backward + optimize\n",
+    "        outputs = net(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        del inputs\n",
+    "        del labels\n",
+    "\n",
+    "        # print statistics\n",
+    "        running_loss += loss.item()\n",
+    "        if i % 2000 == 1999:    # print every 2000 mini-batches\n",
+    "            print('[%d, %5d] loss: %.3f' %\n",
+    "                  (epoch + 1, i + 1, running_loss / 2000))\n",
+    "            running_loss = 0.0\n",
+    "\n",
+    "print('Finished Training')"
    ]
   },
   {
@@ -369,74 +401,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://github.com/ailias/Focal-Loss-implement-on-Tensorflow/blob/master/focal_loss.py\n",
-    "\n",
-    "from tensorflow.python.ops import array_ops\n",
-    "\n",
-    "def focal_loss(prediction_tensor, target_tensor, weights=None, alpha=0.25, gamma=2):\n",
-    "    r\"\"\"Compute focal loss for predictions.\n",
-    "        Multi-labels Focal loss formula:\n",
-    "            FL = -alpha * (z-p)^gamma * log(p) -(1-alpha) * p^gamma * log(1-p)\n",
-    "                 ,which alpha = 0.25, gamma = 2, p = sigmoid(x), z = target_tensor.\n",
-    "    Args:\n",
-    "     prediction_tensor: A float tensor of shape [batch_size, num_anchors,\n",
-    "        num_classes] representing the predicted logits for each class\n",
-    "     target_tensor: A float tensor of shape [batch_size, num_anchors,\n",
-    "        num_classes] representing one-hot encoded classification targets\n",
-    "     weights: A float tensor of shape [batch_size, num_anchors]\n",
-    "     alpha: A scalar tensor for focal loss alpha hyper-parameter\n",
-    "     gamma: A scalar tensor for focal loss gamma hyper-parameter\n",
-    "    Returns:\n",
-    "        loss: A (scalar) tensor representing the value of the loss function\n",
-    "    \"\"\"\n",
-    "    sigmoid_p = tf.nn.sigmoid(prediction_tensor)\n",
-    "    zeros = array_ops.zeros_like(sigmoid_p, dtype=sigmoid_p.dtype)\n",
-    "    \n",
-    "    # For poitive prediction, only need consider front part loss, back part is 0;\n",
-    "    # target_tensor > zeros <=> z=1, so poitive coefficient = z - p.\n",
-    "    pos_p_sub = array_ops.where(target_tensor > zeros, target_tensor - sigmoid_p, zeros)\n",
-    "    \n",
-    "    # For negative prediction, only need consider back part loss, front part is 0;\n",
-    "    # target_tensor > zeros <=> z=1, so negative coefficient = 0.\n",
-    "    neg_p_sub = array_ops.where(target_tensor > zeros, zeros, sigmoid_p)\n",
-    "    per_entry_cross_ent = - alpha * (pos_p_sub ** gamma) * tf.math.log(tf.clip_by_value(sigmoid_p, 1e-8, 1.0)) \\\n",
-    "                          - (1 - alpha) * (neg_p_sub ** gamma) * tf.math.log(tf.clip_by_value(1.0 - sigmoid_p, 1e-8, 1.0))\n",
-    "    return tf.reduce_sum(per_entry_cross_ent)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from tensorflow.keras.optimizers import Adam, SGD\n",
     "from keras_unet.metrics import iou, iou_thresholded\n",
     "from keras_unet.losses import jaccard_distance\n",
     "\n",
     "def closs(y_true, y_pred):\n",
-    "    return 2 * jaccard_distance(y_true, y_pred) + tf.keras.losses.binary_crossentropy(y_true, y_pred)\n",
+    "    return 3 * jaccard_distance(y_true, y_pred) + tf.keras.losses.binary_crossentropy(y_true, y_pred)\n",
     "\n",
     "model.compile(\n",
-    "    optimizer=Adam(),\n",
-    "#     optimizer=\"adam\",\n",
+    "    optimizer=Adam(learning_rate=0.001 * 10),\n",
     "    #optimizer=SGD(lr=0.01, momentum=0.99),\n",
-    "#     loss='binary_crossentropy',\n",
-    "    loss=jaccard_distance,\n",
-    "#     loss=focal_loss,\n",
+    "    loss='binary_crossentropy',\n",
+    "#     loss=jaccard_distance,\n",
     "#     loss=closs,\n",
-    "    metrics=[iou, iou_thresholded],\n",
+    "    metrics=[iou, iou_thresholded]\n",
     ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.load_weights(model_filename)\n",
-    "model.load_weights('model_trainafter_ndsi_unet.h5')"
    ]
   },
   {
@@ -449,10 +428,11 @@
    "source": [
     "history = model.fit(\n",
     "    train_gen,\n",
-    "    steps_per_epoch=train_len // BATCH_SIZE,\n",
-    "    epochs=20,\n",
+    "    steps_per_epoch=1000,\n",
+    "    epochs=500,\n",
+    "    \n",
     "    validation_data=(x_val_tf, y_val_tf),\n",
-    "    validation_batch_size=BATCH_SIZE,\n",
+    "    validation_batch_size=2,\n",
     "    callbacks=[callback_checkpoint]\n",
     ")\n"
    ]
@@ -474,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_weights('model_trainafter.h5')"
+    "model.load_weights(model_filename)"
    ]
   },
   {
@@ -483,17 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights(model_filename)\n",
-    "# model.load_weights('model_trainchpt_e66.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = model.predict(x_val, batch_size=BATCH_SIZE)"
+    "y_pred = model.predict(x_val, batch_size=2)"
    ]
   },
   {
