--- a/modeltrain_autoencoder.ipynb
+++ b/modeltrain_autoencoder.ipynb
@@ -19,7 +19,6 @@
     "import glob\n",
     "import os\n",
     "import sys\n",
-    "import gc\n",
     "from pathlib import Path\n",
     "from PIL import Image\n",
     "\n",
@@ -43,15 +42,14 @@
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = Path(\"./data/tiles/ls8\")\n",
+    "DATA_DIR = Path(\"./data/tiles/ls78_ae\")\n",
     "BATCH_SIZE = 2\n",
     "\n",
     "MAX_X = 255\n",
-    "# MAX_Y = 65535  # TODO: Tilegen outputs rgb image, not grayscale\n",
-    "MAX_Y = 255\n",
+    "MAX_Y = 65535  # TODO: Tilegen outputs rgb image, not grayscale\n",
     "\n",
     "BAND_DIRS = sorted(list(DATA_DIR.glob(\"B*\"))) # [::-1]  # reverse for rgb\n",
-    "TRUTH_DIR = DATA_DIR / \"truth\"\n",
+    "BASE_DIR = DATA_DIR / \"B1\"\n",
     "\n",
     "display(BAND_DIRS)\n",
     "display(list())"
@@ -63,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "truth_paths = list(TRUTH_DIR.glob(\"*.png\"))"
+    "base_paths = list(BASE_DIR.glob(\"*.png\"))"
    ]
   },
   {
@@ -74,12 +72,10 @@
    "source": [
     "def read_fname(fname):\n",
     "    # div by maxy, but mul by maxx in anticipation of preprocess_transform\n",
-    "    truth = np.array(Image.open(TRUTH_DIR / fname)) / (MAX_Y / MAX_X)\n",
-    "    truth = truth.astype('uint8')\n",
     "    bands = np.asarray([np.array(Image.open(band_dir / fname)) for band_dir in BAND_DIRS])\n",
     "#     bands = bands[1:4] # [::-1]\n",
     "    mchannel = np.dstack(bands).astype('uint8')\n",
-    "    return mchannel, truth\n",
+    "    return mchannel\n",
     "\n",
     "def preprocess_transform(ds):\n",
     "    return (ds / MAX_X).astype('float32')\n",
@@ -96,12 +92,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(truth_paths[0].name)\n",
+    "display(base_paths[0].name)\n",
     "\n",
-    "x0, y0 = read_fname(truth_paths[0].name)\n",
+    "x0 = read_fname(base_paths[0].name)\n",
     "\n",
     "display(x0.shape)\n",
-    "display(y0.shape)\n"
+    "# display(y0.shape)\n"
    ]
   },
   {
@@ -112,20 +108,17 @@
    },
    "outputs": [],
    "source": [
-    "img_np = np.zeros(shape = (len(truth_paths), *x0.shape), dtype = 'uint8')\n",
-    "msk_np = np.zeros(shape = (len(truth_paths), *y0.shape), dtype = 'uint8')\n",
+    "img_lst = []\n",
     "\n",
-    "for i, truth_path in enumerate(truth_paths):\n",
-    "    img, truth = read_fname(truth_path.name)\n",
-    "    img_np[i] = img\n",
-    "    msk_np[i] = truth\n",
+    "for base_path in base_paths:\n",
+    "    img = read_fname(base_path.name)\n",
+    "    img_lst.append(img)\n",
     "\n",
-    "msk_np = msk_np.reshape(msk_np.shape[0], msk_np.shape[1], msk_np.shape[2], 1)\n",
+    "img_np = np.asarray(img_lst)\n",
     "\n",
-    "gc.collect()\n",
+    "del img_lst\n",
     "\n",
-    "display(f'{img_np.shape=}')\n",
-    "display(f'{msk_np.shape=}')"
+    "display(f'{img_np.shape=}')"
    ]
   },
   {
@@ -136,14 +129,12 @@
    },
    "outputs": [],
    "source": [
-    "from keras_unet.utils import plot_imgs\n",
+    "from keras_unet.utils import plot_imgs, plot_aeimgs\n",
     "\n",
     "display(img_np.min())\n",
     "display(img_np.max())\n",
-    "display(msk_np.min())\n",
-    "display(msk_np.max())\n",
     "\n",
-    "plot_imgs(org_imgs=rgb_transform(img_np[:10]) / 255, mask_imgs=msk_np[:10] / 255, nm_img_to_plot=5, figsize=6)"
+    "plot_aeimgs(org_imgs=rgb_transform(img_np) / 255, nm_img_to_plot=5, figsize=6)"
    ]
   },
   {
@@ -154,30 +145,18 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# TODO: this requires a copy - use different sets for train and val to limit memory\n",
-    "\n",
-    "x_train, x_val, y_train, y_val = train_test_split(img_np, msk_np, test_size=0.05, random_state=0)\n",
+    "x_train, x_val, _, _ = train_test_split(img_np, img_np, test_size=0.30, random_state=0)\n",
     "\n",
     "print(\"x_train: \", x_train.shape)\n",
-    "print(\"y_train: \", y_train.shape)\n",
+    "# print(\"y_train: \", y_train.shape)\n",
     "print(\"x_val: \", x_val.shape)\n",
-    "print(\"y_val: \", y_val.shape)\n",
+    "# print(\"y_val: \", y_val.shape)\n",
     "\n",
     "input_shape = x_train[0].shape\n",
     "display(f'{input_shape=}')\n",
     "\n",
     "train_len = len(x_train)\n",
-    "validation_len = len(x_val)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del img_np\n",
-    "del msk_np"
+    "validation_len = len(x_val)"
    ]
   },
   {
@@ -187,10 +166,8 @@
    "outputs": [],
    "source": [
     "x_val = preprocess_transform(x_val)\n",
-    "y_val = preprocess_transform(y_val)\n",
     "\n",
-    "x_val_tf = tf.convert_to_tensor(x_val)\n",
-    "y_val_tf = tf.convert_to_tensor(y_val)"
+    "x_val_tf = tf.convert_to_tensor(x_val)"
    ]
   },
   {
@@ -200,40 +177,25 @@
    "outputs": [],
    "source": [
     "from keras_unet.utils import get_augmented\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "# from keras.preprocessing.image import NumpyArrayIterator\n",
-    "from imgloader import NumpyArrayIterator\n",
     "\n",
-    "img_gen_args = dict(\n",
-    "    # rescale=1 / 255,\n",
-    "    preprocessing_function=preprocess_transform,\n",
-    "    rotation_range=360.,\n",
-    "    width_shift_range=0.05,\n",
-    "    height_shift_range=0.05,\n",
-    "    shear_range=40,\n",
-    "    zoom_range=0.2,\n",
-    "    # brightness_range=[0.6,1.4],  # only works on 1 or 3 channel images\n",
-    "    channel_shift_range=10.0,\n",
-    "    horizontal_flip=True,\n",
-    "    vertical_flip=True,\n",
-    "    fill_mode='reflect'\n",
-    ")\n",
-    "\n",
-    "# train_gen = get_augmented(\n",
-    "#     x_train, y_train, \n",
-    "# #     x_val_tf, y_val_tf,\n",
-    "#     batch_size=BATCH_SIZE,\n",
-    "#     data_gen_args = img_gen_args\n",
-    "# )\n",
-    "\n",
-    "train_gen = NumpyArrayIterator(\n",
-    "    x_train, y_train,\n",
-    "    image_data_generator = ImageDataGenerator(**img_gen_args),\n",
-    "    transform_img = preprocess_transform,\n",
-    "    batch_size = BATCH_SIZE,\n",
-    "    shuffle = True,\n",
-    "    dtype='float32'\n",
-    ")\n",
+    "train_gen = get_augmented(\n",
+    "    x_train, x_train, \n",
+    "#     x_val_tf, y_val_tf,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    data_gen_args = dict(\n",
+    "#         rescale=1 / 255,\n",
+    "        preprocessing_function=preprocess_transform,\n",
+    "        rotation_range=360.,\n",
+    "        width_shift_range=0.05,\n",
+    "        height_shift_range=0.05,\n",
+    "        shear_range=40,\n",
+    "        zoom_range=0.2,\n",
+    "#         brightness_range=[0.6,1.4],  # only works on 1 or 3 channel images\n",
+    "        channel_shift_range=10.0,\n",
+    "        horizontal_flip=True,\n",
+    "        vertical_flip=True,\n",
+    "        fill_mode='reflect'\n",
+    "    ))\n",
     "\n",
     "# train_gen = get_augmented(\n",
     "#     x_train, y_train, batch_size=2,\n",
@@ -249,8 +211,7 @@
     "#     )\n",
     "# )\n",
     "\n",
-    "# del x_train\n",
-    "# del y_train"
+    "del x_train"
    ]
   },
   {
@@ -267,19 +228,7 @@
     "print(xx.shape, yy.shape)\n",
     "from keras_unet.utils import plot_imgs\n",
     "\n",
-    "\n",
-    "# def preprocess_transform(ds):\n",
-    "#     return (ds / MAX_X).astype('float32')\n",
-    "\n",
-    "# xx = preprocess_transform(xx)\n",
-    "# yy = preprocess_transform(yy)\n",
-    "\n",
-    "print(xx.min())\n",
-    "print(xx.max())\n",
-    "print(yy.min())\n",
-    "print(yy.max())\n",
-    "\n",
-    "plot_imgs(org_imgs=rgb_transform(xx), mask_imgs=yy, nm_img_to_plot=2, figsize=6)"
+    "plot_aeimgs(org_imgs=rgb_transform(xx), nm_img_to_plot=2, figsize=6)"
    ]
   },
   {
@@ -319,6 +268,8 @@
     "        use_squeeze_on_enc=True,\n",
     "        use_squeeze_on_dec=True,\n",
     "        num_layers=5,\n",
+    "        skip_connections=False,  # auto encoder\n",
+    "        num_classes=6,  # 6 output channels\n",
     "    )\n",
     "    return model\n",
     "\n",
@@ -345,6 +296,8 @@
    },
    "outputs": [],
    "source": [
+    "tf.keras.utils.plot_model(model)\n",
+    "\n",
     "display(model.summary())"
    ]
   },
@@ -421,8 +374,8 @@
     "    optimizer=Adam(),\n",
     "#     optimizer=\"adam\",\n",
     "    #optimizer=SGD(lr=0.01, momentum=0.99),\n",
-    "#     loss='binary_crossentropy',\n",
-    "    loss=jaccard_distance,\n",
+    "    loss='binary_crossentropy',\n",
+    "#     loss=jaccard_distance,\n",
     "#     loss=focal_loss,\n",
     "#     loss=closs,\n",
     "    metrics=[iou, iou_thresholded],\n",
@@ -435,8 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.load_weights(model_filename)\n",
-    "model.load_weights('model_trainafter_ndsi_unet.h5')"
+    "model.load_weights('autoencoder.h5')"
    ]
   },
   {
@@ -450,8 +402,8 @@
     "history = model.fit(\n",
     "    train_gen,\n",
     "    steps_per_epoch=train_len // BATCH_SIZE,\n",
-    "    epochs=20,\n",
-    "    validation_data=(x_val_tf, y_val_tf),\n",
+    "    epochs=500,\n",
+    "    validation_data=(x_val_tf, x_val_tf),\n",
     "    validation_batch_size=BATCH_SIZE,\n",
     "    callbacks=[callback_checkpoint]\n",
     ")\n"
@@ -474,7 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_weights('model_trainafter.h5')"
+    "model.save_weights('autoencoder.h5')"
    ]
   },
   {
@@ -484,7 +436,7 @@
    "outputs": [],
    "source": [
     "model.load_weights(model_filename)\n",
-    "# model.load_weights('model_trainchpt_e66.h5')"
+    "# model.load_weights('model_trainchpt.h5')"
    ]
   },
   {
@@ -493,7 +445,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model.predict(x_val, batch_size=BATCH_SIZE)"
+    "pred_off = 1000\n",
+    "y_pred = model.predict(x_val[pred_off:pred_off + 10], batch_size=BATCH_SIZE)"
    ]
   },
   {
@@ -504,10 +457,13 @@
    },
    "outputs": [],
    "source": [
-    "from keras_unet.utils import plot_imgs\n",
+    "from keras_unet.utils import plot_imgs, plot_aeimgs\n",
     "\n",
     "display(len(x_val))\n",
-    "plot_imgs(org_imgs=rgb_transform(x_val), mask_imgs=y_val, pred_imgs=y_pred, nm_img_to_plot=10, figsize=4)"
+    "plot_aeimgs(\n",
+    "    org_imgs=rgb_transform(x_val[pred_off:pred_off + 10]),\n",
+    "    pred_imgs=rgb_transform(y_pred),\n",
+    "    nm_img_to_plot=10, figsize=4)\n"
    ]
   },
   {
