--- a/usquarednet_proto.ipynb
+++ b/usquarednet_proto.ipynb
@@ -82,7 +82,7 @@
     "    \n",
     "    rebnconv3d = rebnconv_block(concatenate([rebnconv4, rebnconv3]), mid_ch, dirate=4)\n",
     "    rebnconv2d = rebnconv_block(concatenate([rebnconv3d, rebnconv2]), mid_ch, dirate=2)\n",
-    "    rebnconv1d = rebnconv_block(concatenate([rebnconv2d, rebnconv1]), mid_ch, dirate=1)\n",
+    "    rebnconv1d = rebnconv_block(concatenate([rebnconv2d, rebnconv1]), out_ch, dirate=1)\n",
     "    \n",
     "    return rebnconv1d"
    ]
@@ -108,7 +108,7 @@
     "    rebnconv3dup = UpSampling2D((2, 2), interpolation='bilinear')(rebnconv3d)\n",
     "    rebnconv2d = rebnconv_block(concatenate([rebnconv3dup, rebnconv2]), mid_ch, dirate=1)\n",
     "    rebnconv2dup = UpSampling2D((2, 2), interpolation='bilinear')(rebnconv2d)\n",
-    "    rebnconv1d = rebnconv_block(concatenate([rebnconv2dup, rebnconv1]), mid_ch, dirate=1)\n",
+    "    rebnconv1d = rebnconv_block(concatenate([rebnconv2dup, rebnconv1]), out_ch, dirate=1)\n",
     "    \n",
     "    return rebnconv1d"
    ]
@@ -138,7 +138,7 @@
     "    rebnconv3dup = UpSampling2D((2, 2), interpolation='bilinear')(rebnconv3d)\n",
     "    rebnconv2d = rebnconv_block(concatenate([rebnconv3dup, rebnconv2]), mid_ch, dirate=1)\n",
     "    rebnconv2dup = UpSampling2D((2, 2), interpolation='bilinear')(rebnconv2d)\n",
-    "    rebnconv1d = rebnconv_block(concatenate([rebnconv2dup, rebnconv1]), mid_ch, dirate=1)\n",
+    "    rebnconv1d = rebnconv_block(concatenate([rebnconv2dup, rebnconv1]), out_ch, dirate=1)\n",
     "    \n",
     "    return rebnconv1d"
    ]
@@ -172,7 +172,7 @@
     "    rebnconv3dup = UpSampling2D((2, 2), interpolation='bilinear')(rebnconv3d)\n",
     "    rebnconv2d = rebnconv_block(concatenate([rebnconv3dup, rebnconv2]), mid_ch, dirate=1)\n",
     "    rebnconv2dup = UpSampling2D((2, 2), interpolation='bilinear')(rebnconv2d)\n",
-    "    rebnconv1d = rebnconv_block(concatenate([rebnconv2dup, rebnconv1]), mid_ch, dirate=1)\n",
+    "    rebnconv1d = rebnconv_block(concatenate([rebnconv2dup, rebnconv1]), out_ch, dirate=1)\n",
     "    \n",
     "    return rebnconv1d"
    ]
@@ -210,9 +210,66 @@
     "    rebnconv3dup = UpSampling2D((2, 2), interpolation='bilinear')(rebnconv3d)\n",
     "    rebnconv2d = rebnconv_block(concatenate([rebnconv3dup, rebnconv2]), mid_ch, dirate=1)\n",
     "    rebnconv2dup = UpSampling2D((2, 2), interpolation='bilinear')(rebnconv2d)\n",
-    "    rebnconv1d = rebnconv_block(concatenate([rebnconv2dup, rebnconv1]), mid_ch, dirate=1)\n",
+    "    rebnconv1d = rebnconv_block(concatenate([rebnconv2dup, rebnconv1]), out_ch, dirate=1)\n",
     "    \n",
     "    return rebnconv1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def u2net_block(inputs, in_ch = 3, out_ch = 1, kernel_initializer = 'he_normal', padding = 'same'):\n",
+    "    stage1 = rsu7(inputs, in_ch, 32, 64)\n",
+    "    pool12 = MaxPooling2D((2, 2))(stage1)\n",
+    "    stage2 = rsu6(pool12, 64, 32, 128)\n",
+    "    pool23 = MaxPooling2D((2, 2))(stage2)\n",
+    "    stage3 = rsu5(pool23, 128, 64, 256)\n",
+    "    pool34 = MaxPooling2D((2, 2))(stage3)\n",
+    "    stage4 = rsu4(pool34, 256, 128, 512)\n",
+    "    pool45 = MaxPooling2D((2, 2))(stage4)\n",
+    "    stage5 = rsu4f(pool45, 512, 256, 512)\n",
+    "    pool56 = MaxPooling2D((2, 2))(stage5)\n",
+    "    \n",
+    "    stage6 = rsu4f(pool56, 512, 256, 512)\n",
+    "    stage6up = UpSampling2D((2, 2), interpolation='bilinear')(stage6)\n",
+    "    \n",
+    "    stage5d = rsu4f(concatenate([stage6up, stage5]), 1024, 256, 512)\n",
+    "    stage5dup = UpSampling2D((2, 2), interpolation='bilinear')(stage5d)\n",
+    "    stage4d = rsu4(concatenate([stage5dup, stage4]), 1024, 128, 256)\n",
+    "    stage4dup = UpSampling2D((2, 2), interpolation='bilinear')(stage4d)\n",
+    "    stage3d = rsu5(concatenate([stage4dup, stage3]), 512, 64, 128)\n",
+    "    stage3dup = UpSampling2D((2, 2), interpolation='bilinear')(stage3d)\n",
+    "    stage2d = rsu6(concatenate([stage3dup, stage2]), 256, 32, 64)\n",
+    "    stage2dup = UpSampling2D((2, 2), interpolation='bilinear')(stage2d)\n",
+    "    stage1d = rsu6(concatenate([stage2dup, stage1]), 128, 16, 64)\n",
+    "    \n",
+    "    side1 = Conv2D(out_ch, 3, kernel_initializer=kernel_initializer, padding=padding)(stage1d)\n",
+    "    side2 = Conv2D(out_ch, 3, kernel_initializer=kernel_initializer, padding=padding)(stage2d)\n",
+    "    side3 = Conv2D(out_ch, 3, kernel_initializer=kernel_initializer, padding=padding)(stage3d)\n",
+    "    side4 = Conv2D(out_ch, 3, kernel_initializer=kernel_initializer, padding=padding)(stage4d)\n",
+    "    side5 = Conv2D(out_ch, 3, kernel_initializer=kernel_initializer, padding=padding)(stage5d)\n",
+    "    side6 = Conv2D(out_ch, 3, kernel_initializer=kernel_initializer, padding=padding)(stage6)\n",
+    "    \n",
+    "    d1 = side1\n",
+    "    d2 = UpSampling2D((2, 2), interpolation='bilinear')(side2)\n",
+    "    d3 = UpSampling2D((4, 4), interpolation='bilinear')(side3)\n",
+    "    d4 = UpSampling2D((8, 8), interpolation='bilinear')(side4)\n",
+    "    d5 = UpSampling2D((16, 16), interpolation='bilinear')(side5)\n",
+    "    d6 = UpSampling2D((32, 32), interpolation='bilinear')(side6)\n",
+    "    \n",
+    "    d0 = Conv2D(\n",
+    "        out_ch, 3,\n",
+    "        kernel_initializer=kernel_initializer,\n",
+    "        padding=padding\n",
+    "    )(concatenate([d1, d2, d3, d4, d5, d6]))\n",
+    "    \n",
+    "    def sig(x):\n",
+    "        return Activation('sigmoid')(x)\n",
+    "    \n",
+    "    return sig(d0), sig(d1), sig(d2), sig(d3), sig(d4), sig(d5), sig(d6)"
    ]
   },
   {
@@ -223,13 +280,20 @@
    },
    "outputs": [],
    "source": [
-    "min = Input((128, 128, 1))\n",
-    "block = rsu7(min)\n",
+    "min = Input((256, 256, 1))\n",
+    "sides = u2net_block(min)\n",
     "\n",
-    "model = Model(inputs=[min], outputs=[block])\n",
+    "model = Model(inputs=[min], outputs=sides)\n",
     "\n",
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
