--- a/modeltrain.ipynb
+++ b/modeltrain.ipynb
@@ -22,6 +22,7 @@
     "import gc\n",
     "from pathlib import Path\n",
     "from PIL import Image\n",
+    "from datetime import datetime\n",
     "\n",
     "import tensorflow as tf\n",
     "import tensorflow.keras as keras\n",
@@ -33,7 +34,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%load_ext tensorboard\n",
+    "import tensorboard"
+   ]
   },
   {
    "cell_type": "code",
@@ -45,6 +49,8 @@
    "source": [
     "DATA_DIR = Path(\"./data/tiles/ls8\")\n",
     "BATCH_SIZE = 2\n",
+    "\n",
+    "NETWORK_HEADS = 7\n",
     "\n",
     "MAX_X = 255\n",
     "# MAX_Y = 65535  # TODO: Tilegen outputs rgb image, not grayscale\n",
@@ -74,7 +80,7 @@
    "source": [
     "def read_fname(fname):\n",
     "    # div by maxy, but mul by maxx in anticipation of preprocess_transform\n",
-    "    truth = np.array(Image.open(TRUTH_DIR / fname)) / (MAX_Y / MAX_X)\n",
+    "    truth = np.array(Image.open(TRUTH_DIR / fname)) # / (MAX_Y / MAX_X)\n",
     "    truth = truth.astype('uint8')\n",
     "    bands = np.asarray([np.array(Image.open(band_dir / fname)) for band_dir in BAND_DIRS])\n",
     "#     bands = bands[1:4] # [::-1]\n",
@@ -232,7 +238,8 @@
     "    transform_img = preprocess_transform,\n",
     "    batch_size = BATCH_SIZE,\n",
     "    shuffle = True,\n",
-    "    dtype='float32'\n",
+    "    dtype = 'float32',\n",
+    "    network_heads = NETWORK_HEADS\n",
     ")\n",
     "\n",
     "# train_gen = get_augmented(\n",
@@ -264,6 +271,10 @@
     "sample_batch = next(train_gen)\n",
     "\n",
     "xx, yy = sample_batch\n",
+    "\n",
+    "if NETWORK_HEADS > 1:\n",
+    "    yy = yy[0]\n",
+    "\n",
     "print(xx.shape, yy.shape)\n",
     "from keras_unet.utils import plot_imgs\n",
     "\n",
@@ -285,6 +296,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from usquarednet import u2netp_block, u2net_block\n",
+    "from tensorflow.keras.layers import Input\n",
+    "from tensorflow.keras.models import Model\n",
+    "\n",
+    "def create_unetp():\n",
+    "    inputs = Input(input_shape)\n",
+    "    sides = u2net_block(inputs)\n",
+    "    model = Model(inputs=[inputs], outputs=sides)\n",
+    "    return model\n",
+    "\n",
+    "model = create_unetp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -293,7 +323,7 @@
     "from bcdunet import BCDU_net_D3, BCDU_net_D1\n",
     "\n",
     "# input_shape = (512, 512, 3)\n",
-    "# model = BCDU_net_D3(input_size=input_shape)\n"
+    "# model = BCDU_net_D3(input_size=input_shape, afunc='swish')\n"
    ]
   },
   {
@@ -311,18 +341,19 @@
     "def create_model_unet():\n",
     "    model = custom_unet(\n",
     "        input_shape,\n",
-    "        filters=32,\n",
+    "        filters=8,\n",
+    "        activation='swish',\n",
     "        use_batch_norm=True,\n",
     "        dropout=0.5,  # 0.3\n",
     "        dropout_change_per_layer=0.0,\n",
     "        use_attention=False,\n",
-    "        use_squeeze_on_enc=True,\n",
-    "        use_squeeze_on_dec=True,\n",
+    "        use_squeeze_on_enc=False,\n",
+    "        use_squeeze_on_dec=False,\n",
     "        num_layers=5,\n",
     "    )\n",
     "    return model\n",
     "\n",
-    "model = create_model_unet()\n",
+    "# model = create_model_unet()\n",
     "\n",
     "# model = custom_unet(\n",
     "#     input_shape,\n",
@@ -360,7 +391,10 @@
     "    verbose=1, \n",
     "    monitor='val_loss', \n",
     "    save_best_only=True,\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "logdir = \"logs/fit/\" + datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "tensorboard_callback = keras.callbacks.TensorBoard(log_dir=logdir)\n"
    ]
   },
   {
@@ -418,11 +452,13 @@
     "    return 2 * jaccard_distance(y_true, y_pred) + tf.keras.losses.binary_crossentropy(y_true, y_pred)\n",
     "\n",
     "model.compile(\n",
-    "    optimizer=Adam(),\n",
+    "    optimizer=Adam(learning_rate=0.001),\n",
+    "#     optimizer=Adam(learning_rate=0.0001),\n",
     "#     optimizer=\"adam\",\n",
     "    #optimizer=SGD(lr=0.01, momentum=0.99),\n",
+    "    loss=NETWORK_HEADS * ['binary_crossentropy'],\n",
     "#     loss='binary_crossentropy',\n",
-    "    loss=jaccard_distance,\n",
+    "#     loss=jaccard_distance,\n",
     "#     loss=focal_loss,\n",
     "#     loss=closs,\n",
     "    metrics=[iou, iou_thresholded],\n",
@@ -436,7 +472,8 @@
    "outputs": [],
    "source": [
     "# model.load_weights(model_filename)\n",
-    "model.load_weights('model_trainafter_ndsi_unet.h5')"
+    "# model.load_weights('model_trainafter_ndsi_unet.h5')\n",
+    "# model.load_weights('bcdu_net_d3_20201002_2.h5')"
    ]
   },
   {
@@ -450,10 +487,10 @@
     "history = model.fit(\n",
     "    train_gen,\n",
     "    steps_per_epoch=train_len // BATCH_SIZE,\n",
-    "    epochs=20,\n",
+    "    epochs=200,\n",
     "    validation_data=(x_val_tf, y_val_tf),\n",
     "    validation_batch_size=BATCH_SIZE,\n",
-    "    callbacks=[callback_checkpoint]\n",
+    "    callbacks=[callback_checkpoint, tensorboard_callback]\n",
     ")\n"
    ]
   },
@@ -483,8 +520,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights(model_filename)\n",
-    "# model.load_weights('model_trainchpt_e66.h5')"
+    "# model.load_weights(model_filename)\n",
+    "# model.save('model.h5')\n",
+    "model.load_weights('model_trainchpt_e183.h5')"
    ]
   },
   {
@@ -493,7 +531,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model.predict(x_val, batch_size=BATCH_SIZE)"
+    "y_pred = model.predict(x_val, batch_size=BATCH_SIZE)\n",
+    "\n",
+    "if NETWORK_HEADS > 1:\n",
+    "    y_pred = y_pred[0]"
    ]
   },
   {
